# mera-explorer

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
filesystems/: how_to_create_filesystems_txt.md  merafiles_8TBvolume.txt  merafiles_ecfsdui.txt  merafiles_reaext03.txt  merafiles_reaext04.txt  merafiles_reaext05.txt  merafiles_reaext06.txt  merafiles_reaext07.txt  merafiles_reaext08.txt
local/: paths.txt
mera_explorer/: __init__.py  forecasts.py  gribs.py  transfer.py  utils.py
mera_explorer/data/: __init__.py  cumulative.yaml  mera-grid-geometry.yaml  my_data.py  mydata.yaml  neurallam-all.yaml  neurallam.py  neurallam.yaml
reaext/: merafiles_reaext03.txt  merafiles_reaext04.txt  merafiles_reaext05.txt  merafiles_reaext06.txt  merafiles_reaext07.txt  merafiles_reaext08.txt
scripts/: copy_from_reaext.py  create_mera_sample.py  create_static_features.py  is_my_data_there.py  make_fake_forecast.py  ophelia_forecast_plot.py  write_gribs_for_neurallam_init.py
tests/: import_tests.py  transfer_tests.py
